--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
       * {
         box-sizing: border-box;
       }
+      /* body::-webkit-scrollbar {
+      width: 0.3rem;              
+    }
+
+    body::-webkit-scrollbar-track {
+      background: blue;        
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: #d2e4b6;   
+      border-radius: 50px;      
+      border: 1px solid white; 
+    } */
     </style>
     <title>Hideout</title>
   </head>
