post page bug resolved

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       * {
         box-sizing: border-box;
       }
-      /* body::-webkit-scrollbar {
-      width: 0.3rem;              
+      body::-webkit-scrollbar {
+      width: 0rem;              
     }
 
     body::-webkit-scrollbar-track {
@@ -25,7 +25,7 @@
       background-color: #d2e4b6;   
       border-radius: 50px;      
       border: 1px solid white; 
-    } */
+    }
     </style>
     <title>Hideout</title>
   </head>
