some bugs resolved

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
       body::-webkit-scrollbar {
       width: 0rem;              
     }
-
+/* 
     body::-webkit-scrollbar-track {
       background: blue;        
+      width:1rem;
+      height:1rem;
     }
 
     body::-webkit-scrollbar-thumb {
       background-color: #d2e4b6;   
       border-radius: 50px;      
       border: 1px solid white; 
-    }
+    } */
     </style>
     <title>Hideout</title>
   </head>
